fix splash page button sizes on mobile

--- a/src/Splash.css
+++ b/src/Splash.css
@@ -100,6 +100,8 @@ p.splash {
 
     button.splash {
         margin: 10px;
+        font-size: 14px;
+        padding: 8px 10px;
     }
 }
 
